<resources>
    <string name="app_name">PathfinderHelper</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="characteristics.strength">Strength</string>

    <!--Info-->
    <string name="sex">Sex</string>

    <!--Characteristic-->
    <string name="strength">Strength</string>
    <string name="strength.short">STR</string>
    <string name="dexterity">Dexterity</string>
    <string name="dexterity.short">DEX</string>
    <string name="constitution">Constitution</string>
    <string name="constitution.short">CON</string>
    <string name="intelligence">Intelligence</string>
    <string name="intelligence.short">INT</string>
    <string name="wisdom">Wisdom</string>
    <string name="wisdom.short">WIS</string>
    <string name="charisma">Charisma</string>
    <string name="charisma.short">CHA</string>

    <string-array name="sex">
        <item>None</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="school">School</string>
    <string name="level">Level</string>
    <string name="casting">Casting</string>
    <string name="casting_time">Casting time</string>
    <string name="components">Components</string>
    <string name="effect">Effect</string>
    <string name="range">Range</string>
    <string name="duration">Duration</string>
    <string name="saving_throw">Saving Throw</string>
    <string name="spell_resistance">Spell Resistance</string>
    <string name="description">Description</string>

    <!--Heroes list-->
    <string name="heroes_list.delete">Delete</string>
    <string name="heroes_list.add">New</string>
    <string name="heroes_list.edit">Edit</string>

    <!--Create hero-->
    <string name="hero.name.hint">Enter hero name</string>
    <string name="next_screen">Next</string>
    <string name="create_hero.success.hero_created">Hero %s created</string>
    <string name="create_hero.success.hero_updated">Hero %s updated</string>
    <string name="create_hero.error.empty_name">Name cannot not be empty</string>
    <string name="create_hero.error.name_exists">Name already exists</string>
</resources>
